@@ -1,9 +1,13 @@
-package paymentsystem.service;
+package paymentsystem.service.concrete;
 
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import paymentsystem.exception.exceptions.IncorrectPasswordException;
 import paymentsystem.exception.exceptions.PasswordsMatchException;
@@ -14,11 +18,12 @@ import paymentsystem.exception.exceptions.UserNotFoundException;
 import paymentsystem.mapper.UserMapper;
 import paymentsystem.model.dto.UserDto;
 import paymentsystem.model.entity.UserEntity;
+import paymentsystem.model.enums.UserRole;
 import paymentsystem.model.enums.UserStatus;
 import paymentsystem.repository.UserRepository;
+import paymentsystem.service.abstraction.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -33,7 +38,7 @@ public class UserServiceImpl implements UserService {
         if (userRepository.existsById(username))
             throw new UserAlreadyExistsException();
 
-        UserEntity userEntity = userMapper.buildUserEntity(username, password);
+        UserEntity userEntity = userMapper.buildUserEntity(username, password, UserRole.USER);
 
         userRepository.save(userEntity);
         log.info("User created " + username);
@@ -45,7 +50,7 @@ public class UserServiceImpl implements UserService {
         if (userRepository.existsById(username))
             throw new UserAlreadyExistsException();
 
-        UserEntity userEntity = userMapper.buildUserEntity(username, password);
+        UserEntity userEntity = userMapper.buildUserEntity(username, password, UserRole.ADMIN);
 
         userRepository.save(userEntity);
         log.info("User created " + username);
@@ -83,21 +88,24 @@ public class UserServiceImpl implements UserService {
         if (!userRepository.existsById(username))
             throw new UserNotFoundException();
 
-        if (oldPassword.equals(newPassword))
-            throw new PasswordsMatchException();
-
         UserEntity userEntity = userRepository.getReferenceById(username);
         if (!userEntity.getPassword().equals(oldPassword))
             throw new IncorrectPasswordException();
+
+        if (oldPassword.equals(newPassword))
+            throw new PasswordsMatchException();
+
 
         userEntity.setPassword(newPassword);
         userRepository.save(userEntity);
     }
 
     @Override
-    public List<UserDto> getAllUsers() {
-        List<UserEntity> userEntityList = userRepository.findByStatus(UserStatus.ACTIVE);
-        return userEntityList.stream().map(userMapper::mapToUserDto).collect(Collectors.toList());
+    public Page<UserDto> getAllUsers(Integer page, Integer size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<UserEntity> userEntityPage = userRepository.findByStatus(UserStatus.ACTIVE, pageable);
+        List<UserDto> userDtoList = userEntityPage.getContent().stream().map(userMapper::mapToUserDto).toList();
+        return new PageImpl<>(userDtoList, pageable, userEntityPage.getTotalElements());
     }
 }
 
